Revamp FeatureFlags with enum